# Defunct

./: AddCMakeTest.cmake  AddCompileTimeTest.cmake  CMakeLists.txt  LICENSE  README.md  documentation.md
src/: CMakeLists.txt
src/RefactorF4Acc/hello/: Makefile
src/armflang/: assumed-rank.f90  c_ptrdiff_t.f90  do-concurrent.f90  rank-intrinsic.f90
src/cce/nasa/bug-821337/: Cray-.out  generic-resolution.f90
src/cce/opencoarrays/: all.f90
src/cmake/bug-16234/: .cat.swp  CMakeLists.txt  fortran-submodule.f90  fortran-submodules.f90
src/cmake/bug-16804/: CMakeLists.txt  README.md  cmake-issue.sh
src/cmake/bug-16804/cmake-issue/: cmake-issue.sh
src/cmake/bug-xxxx/: buildcmake
src/cmake/bug-xxxxx/: CMakeLists.txt  cmake-3.0.1.out
src/cmake/bug-xxxxy/: CMakeLists.txt  fortran-submodule.f90
src/ford/: cme214-exam.md  shot-implementation.F90  shot-interface.f90
src/ford/nasa/: README.md  foo-module.f90  internal-subprogram.md
src/ford/nrc/issue-#237-sync-images/: doc-generator.md  stuff.f90
src/gnu/: CMakeLists.txt
src/gnu/autoliv/bug-96320/: pure-shape-mismatch.f90  subroutine-call.f90
src/gnu/bug55824/: CMakeLists.txt  gfortran-49-error-message.txt  gfortran-5-error-message.txt  gfortran-6-error-message.txt  ice-on-pack-unlimited-polymorphic.f90
src/gnu/nasa/: CMakeLists.txt
src/gnu/nasa/bug-55824/: CMakeLists.txt  GNU-6.0.0.out  GNU-7.0.0.out
src/gnu/nasa/bug-77360/: original-code-from-nasa.f90  self-assign-char-array.f90  workaround.f90
src/gnu/nasa/bug-x/: original-code-from-nasa.f90
src/gnu/nasa/bug-xxxx/: unlimited.f90
src/gnu/nrc/: .gitignore
src/gnu/nrc/bug-82077-call-burst-release/: poly-array-section-arg.f90
src/gnu/nrc/bug-82275-rank-mismatch/: reproducer.f90
src/gnu/nrc/bug-84622-intent-out-coarray/: intent-out-coarray.f90
src/gnu/nrc/bug-93158-singleton/module-coarray/: surfaces_implementation.f90
src/gnu/nrc/bug-93158-singleton/submodule-coarray/: surfaces_implementation.f90  surfaces_interface.f90
src/gnu/nrc/call-burst-release/: CMakeLists.txt  FGR_Mesh.f90  FissionGas.f90  Grid.f90  Kind.f90  Mesh.f90  Refabrication.f90  Variables.f90  foobar.f90
src/gnu/nrc/coarray-with-nested-allocatable-components/: gfortran-8-10-ice.f90  intel-18-works.f90  nag-Build-7010-works.f90  opencoarrays-missing-feature.f90  opencoarrays-workaround.f90  work_around_surfaces_packages.f90
src/gnu/nrc/emulated-collectives/: communicate-inside-associate.f90  communicate-inside-block.f90  emulated_collectives_interface.f90  select-is-blind.f90  test-emulated-collectives.f90
src/gnu/nrc/intent-out-coarray/: intent-out-coarray.f90
src/gnu/nrc/issue-511/: intel-18-works.f90  surfaces_packages.f90  work_around_surfaces_packages.f90
src/gnu/nrc/originals/: Commons.f90  Conversions.f90  CoolantVars.f90  FGR_Mesh.f90  FissionGas.f90  Functions.f90  GammaHeating.f90  Mesh.f90
src/gnu/nrc/singleton/module-coarray/: surfaces_interface.f90
src/gnu/nrc/vtk_dataset/: CMakeLists.txt  README.txt
src/gnu/nrc/vtk_dataset/src/: CMakeLists.txt  Misc.f90  Misc_implementation.f90  Misc_interface.f90  Precision.f90  VTK_datasets.f90  VTK_datasets_implementation.f90  VTK_datasets_interface.f90  (+1 more)
src/gnu/numrich/bug-68196/: GNU-4.9.3.out  GNU-5.2.0.out  GNU-7.0.0.out  ice-on-proc-ptr-func-comp.f90
src/gnu/opencoarrays/bug-66681/: GNU-6.0.0.out  GNU-7.0.0.out  assign_this_image_to_complex.f90
src/gnu/opencoarrays/bug-66833/: GNU-4.9.3.out  GNU-5.1.0.out  GNU-6.0.0.out  GNU-7.0.0.out  ice-on-assumed-rank-character.f90
src/gnu/opencoarrays/bug-70696/: GNU-6.0.0.out  GNU-7.0.0.out  post_host_associated_event.f90
src/gnu/opencoarrays/bug-70697/: GNU-6.0.0.out  GNU-7.0.0.out  a.out  tree.f90
src/gnu/opencoarrays/bug-xxxxx/: register.f90
src/gnu/opencoarrays/bug-yyyyy/: ice-on-tbp-invocation.f90
src/gnu/originals/: assemble.sh
src/gnu/sourcery/: command_line_interface.f90
src/gnu/sourcery/bug-59694/: GNU-7.0.0.out  final.f90
src/gnu/sourcery/bug-71156/: consistency.f90  my_interface.smod
src/gnu/sourcery/bug-71952/: GNU-7.0.0.out  additional-examples.f90  coarray-access-with-array-partref.f90
src/gnu/sourcery/bug-77358/: alloc-char-func-in-submodule.f90
src/gnu/sourcery/bug-77903/: one.f90
src/gnu/sourcery/bug-78640/: poly-class-result.f90
src/gnu/sourcery/bug-78641/: alloc-func-in-array-const.f90
src/gnu/sourcery/bug-78737/: minimal-ud-dtio.f90  undefined-ud-dtio.f90
src/gnu/sourcery/bug-82065/: use-intrinsic-module-twice.f90
src/gnu/sourcery/bug-83319/: allocatable-component-of-dt-coarray.f90
src/gnu/sourcery/bug-86117/: copious-warnings.f90
src/gnu/sourcery/bug-96320/: shape-mismatch.f90
src/gnu/sourcery/bug-97864/: operator-ice.f90
src/gnu/sourcery/bug-fixed-in-gcc7/: procedure-contains.f90
src/gnu/sourcery/bug-xxxxx/: all.f90  ud-dtio-abstract.f90
src/gnu/sourcery/uddtio/: gas_implementation.f90  gas_interface.f90  main.f90  object_interface.f90  oracle_interface.f90  results_implementation.f90  results_interface.f90  state_implementation.f90  uddtio-ice.f90
src/intel/bug-6000088617/: reduced-ifortLeak.f90
src/intel/bug-6000162384/: SeverityLevels.F90  StringIntegerMap.F90  email.txt  foo.F90  transcript.txt
src/intel/bug-6000163275/: sky.f90
src/intel/bug-6000164062/: demo-runtime-hang.sh  hello.f90
src/intel/issue-DPD200416083/: oop-caf.f90
src/intel/nrc/bug-03522000/: use-only-type-with-tbmf.f90
src/intel/opencoarrays/: c_sizeof_in_constant.f90
src/intel/request-02547830/: demo-runtime-hang.sh
src/nag/: unlim-poly-contig.f90
src/nag/autoliv/: uddtio.f90
src/nag/nasa/: assign-result-in-pure.f90
src/nag/nrc/: surface-packages.f90
src/opencoarrays/link-error/: link-error.f90
src/pgi/opencoarrays/bug-21894/: PGI-15.7.0.out  PGI-6.1.0.6020053.out  c_ptrdiff_t.f90
src/pgi/opencoarrays/bug-21918-01/: PGI-15.7.0.out  PGI-6.1.0.6020053.out
src/pgi/opencoarrays/bug-21918-02/: PGI-15.7.0.out
src/pgi/opencoarrays/bug-21918-03/: PGI-6.1.0.6020053.out  do-concurrent.f90
src/pgi/opencoarrays/bug-xxxxx/: save-bind-c-conflict.f90
src/pgi/opencoarrays/bug-xxxxy/: assumed-rank.f90
